--- a/css/projects.css
+++ b/css/projects.css
@@ -1,4 +1,4 @@
-.wrapper-photo3 {
+.wallpaper3 {
   background-image: url("../images/projects.jpg");
   height: 100%;
   background-size: cover;
@@ -15,6 +15,6 @@
 
 .message h1 {
   color: white;
-  /* font-family: 'Raleway', sans-serif; */
-  font-family: fantasy;
+  font-family: 'Raleway', sans-serif;
+  /* font-family: fantasy; */
 }
